--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,17 +14,20 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.MaterialYou"
-        tools:targetApi="31">
+        tools:targetApi="33">
         <activity
             android:name=".MainActivity"
             android:exported="true"
             android:label="@string/app_name"
             android:theme="@style/Theme.SpaceFromNASA">
-
+        </activity>
+        <activity
+            android:name=".view.navigation.ViewPagerActivity"
+            android:exported="true">
         </activity>
 
         <activity
-            android:name=".view.navigation.ViewPagerActivity"
+            android:name=".view.navigation.BottomBarActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
